# paper

./: .gitignore
HA-VaR/: it_risk_paper_v8.tex  references.bib
HA-VaR2/: ha_finance_v2.tex  ha_finance_v3.tex  ha_finance_v4.tex  ha_finance_v5.tex  ha_finance_v6.tex  ha_finance_v7.tex  ha_finance_v8.tex
ランサム/: 1.research_upgrade.tex  2.ipsjlike.cls  2.ransomware_ipsj.tex  3.ransomware_backup_fullpaper.tex  4.paper.tex  5.paper.tex  heavy_tail_backup_v10.tex  heavy_tail_backup_v11.tex  heavy_tail_backup_v12.tex  heavy_tail_backup_v13.tex  heavy_tail_backup_v2.tex  heavy_tail_backup_v3.tex  heavy_tail_backup_v4.tex  heavy_tail_backup_v5.tex  heavy_tail_backup_v6.tex  heavy_tail_backup_v7.tex  heavy_tail_backup_v8.tex  heavy_tail_backup_v9.tex
二層流体/: textbook_twophase (1).tex  textbook_twophase (2).tex  textbook_twophase_0.tex  textbook_twophase_3.tex  textbook_twophase_4.tex  textbook_twophase_5.tex  textbook_twophase_6.tex  textbook_twophase_7.tex
二層流体/code/: ARCHITECTURE_v2.md  backend.py  simulation.py
二層流体/code/ccd/: block_tridiag.py  ccd_solver.py
二層流体/code/core/: field.py  (+1 more)
二層流体/src/: pyproject.toml
二層流体/src/twophase/: __init__.py
二層流体/src/twophase/core/: grid.py
二層流体/src/twophase/levelset/: heaviside.py
二層流体/src/twophase/ns_terms/: gravity.py  helmholtz.py  viscous.py
二層流体/src/twophase/pressure/: ppe_builder.py  ppe_solver.py
二層流体/twophase/: ARCHITECTURE_v3.md  config.py
可用性1/: paper_v7_final.tex
可用性2/: ha_stopping_analysis_v4.tex  ha_stopping_analysis_v5.tex  ha_stopping_analysis_v6.tex  ha_stopping_analysis_v7.tex
移民問題/: imigration.tex
(+22 files in other folders)
